--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div id="main" class="main">
         <div class="leftBar">
             <div class="img-profil"><img src="./astess/Image/saad.jpg" alt="image saad"></div>
-            <div class="title-Block">👨🏾‍💻 About me</div>
+            <div class="title-Block">👨🏾‍💻 Profile</div>
             <p class="ligne">Avec passion et diversité, prêt à relever les défis. La
                 créativité et mon esprit d’analyse sont mes précieux armes.</p>
             <div class="title-Block">📩 Contact</div>
-            <p class="ligne">🏠: hay laayoune rue 17 N 14</p>
+            <p class="ligne">🏠: Maroc, Casablanca</p>
             <p class="ligne">📱: +2127079296104</p>
             <p class="ligne">🌍: saadzahir65@gmail.com</p>
             <div class="title-Block">⚙️ Compétence</div>
@@ -196,7 +196,7 @@
                     </div>
                 </div>
                 <div class="experience">
-                    <div class="experienceBlock">Hobbies</div>
+                    <div class="experienceBlock">Loisirs</div>
                     <div class="ligne"></div>
                     <div class="detailsJob">
                         <p><b>Activités sportives :</b> joggings, judo</p>
