--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div id="main" class="main">
         <div class="leftBar">
             <div class="img-profil"><img src="./astess/Image/saad.jpg" alt="image saad"></div>
-            <div class="title-Block">👨🏾‍💻 Profile</div>
+            <div class="title-Block">👨🏾‍💻 Profil</div>
             <p class="ligne">Avec passion et diversité, prêt à relever les défis. La
                 créativité et mon esprit d’analyse sont mes précieux armes.</p>
             <div class="title-Block">📩 Contact</div>
-            <p class="ligne">🏠: Maroc, Casablanca</p>
+            <p class="ligne">🏠: Casablanca, Maroc</p>
             <p class="ligne">📱: +2127079296104</p>
             <p class="ligne">🌍: saadzahir65@gmail.com</p>
-            <div class="title-Block">⚙️ Compétence</div>
+            <div class="title-Block">⚙️ Compétences</div>
                 <!-- back End -->
                 <div class="skillsChapeau">*** Back End ***</div>
                 <div class="skillsProgress">
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="skillsProgress">
-                <div class="techName ligne">Englais</div>
+                <div class="techName ligne">Anglais</div>
                 <div class="progressBarContainer">
                     <div style="width: 90%;" class="progressEmpty"></div>
                     <div style="width: 10%;" class="progressFull"></div>
@@ -137,8 +137,8 @@
         <div class="bodyResume">
             <div class="cardName">
                 <div class="cardNameContent">
-                    <p class="name">ZAHIR SAAD</p>
-                    <p class="profil">Full-Stack Developer</p>
+                    <p class="name">SAAD ZAHIR</p>
+                    <p class="profil">Ingénieur FULL-STACK</p>
                 </div>
             </div>
             <div class="content">
@@ -151,7 +151,7 @@
                             <li>Développement mobile : react native & redux</li>
                             <li>Développement des API REST en PHP</li>
                             <li>Back end PHP MYSQL</li>
-                            <li>Front en HTML/CSS/JAVASCRIPT/JQUERY</li>
+                            <li>Front end HTML/CSS/JAVASCRIPT/JQUERY</li>
                         </ul>
                     </div>
                     <div class="detailsJob">
@@ -159,39 +159,40 @@
                         <ul>
                             <li>Participation au développement de l’intranet
                                 NosRezo</li>
-                            <li>Création d’une application pour la gestion de
+                            <li>Création d’une application de gestion de
                                 congé</li>
                         </ul>
                     </div>
                 </div>
                 <div class="experience">
-                    <div class="experienceBlock">Formationss</div>
+                    <div class="experienceBlock">Formations</div>
                     <div class="ligne"></div>
                     <div class="detailsJob">
-                        <p>Lycée Fatima zahra (Baccalauréat 2016 – 2017)</p>
+                        <p>Master 2020 – 2022 (FST-Faculté des Sciences Techniques)</p>
                         <ul>
-                            <li>Option science de la vie et de la terre.</li>
+                            <li>Master d’Ingénierie de Conception et de
+                                développement d’Applications (MICDA)</li>
                         </ul>
                     </div>
                     <div class="detailsJob">
-                        <p>ISGI (Technicien spécialisé 2017 – 2019)</p>
-                        <ul>
-                            <li>Option de développement informatique à
-                                l’institut supérieur de gestion et d’informatique</li>
-                        </ul>
-                    </div>
-                    <div class="detailsJob">
-                        <p>FST (Licence 2019 – 2020) Faculté des Sciences Techniques</p>
+                        <p>Licence 2019 – 2020 (FST-Faculté des Sciences Techniques)</p>
                         <ul>
                             <li>Licence d’Ingénierie de Conception et de
                                 développement d’Applications (LICDA)</li>
                         </ul>
                     </div>
                     <div class="detailsJob">
-                        <p>master (Licence 2020 – 2022) Faculté des Sciences Techniques</p>
+                        <p>Technicien spécialisé 2017 – 2019 (ISGI)</p>
                         <ul>
-                            <li>Master d’Ingénierie de Conception et de
-                                développement d’Applications (MICDA)</li>
+                            <li>Option de développement informatique à
+                                l’institut supérieur de gestion et d’informatique</li>
+                        </ul>
+                    </div>
+                    <div class="detailsJob">
+
+                        <p>Baccalauréat 2016 – 2017 (Lycée Fatima zahra)</p>
+                        <ul>
+                            <li>Option science de la vie et de la terre.</li>
                         </ul>
                     </div>
                 </div>
@@ -200,7 +201,7 @@
                     <div class="ligne"></div>
                     <div class="detailsJob">
                         <p><b>Activités sportives :</b> joggings, judo</p>
-                        <p><b>Activités culturelles :</b> lectures, voyage</p>
+                        <p><b>Activités culturelles :</b> lecture, voyage</p>
                     </div>
                 </div>
             </div>
