--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="experienceBlock">Expériences professionnelles</div>
                     <div class="ligne"></div>
                     <div class="detailsJob">
-                        <p>Développeur full-stack à STAFFONE (JUIN 2019 – présent)</p>
+                        <p>Développeur Full-stack web/mobile chez propertips by iad (JUIN 2019 – présent)</p>
                         <ul>
                             <li>Développement mobile : react native & redux</li>
                             <li>Développement des API REST en PHP</li>
