--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+    href=
+"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./style/styles.css"/>
-    <title>RESUME</title>
+
+    <title>ZAHIR SAAD RESUME</title>
+
 
 </head>
-<body>
+<!-- <input type="button" class="generatePDF" value="Télécharger" id="generatePDF"></input> -->
+<div class="input-icons">
+    <input type="button" class="generatePDF" value="Télécharger" id="generatePDF"></input>
+    <i class="fa fa-download download">
+    </i>
+</div>
+<body id="cv_body">
     <div id="main" class="main">
         <div class="leftBar">
             <div class="img-profil"><img src="./astess/Image/saad.jpg" alt="image saad"></div>
@@ -201,6 +213,7 @@
                     <div class="ligne"></div>
                     <div class="detailsJob">
                         <p><b>Activités sportives :</b> joggings, judo</p>
+                        <p><b>Activités sportives :</b> joggings, judo</p>
                         <p><b>Activités culturelles :</b> lecture, voyage</p>
                     </div>
                 </div>
@@ -210,4 +223,4 @@
     
 </body>
 </html>
-<!-- <script src="./telecharger.js"></script> -->
+<script src="./javascript/telecharger.js"></script>
