--- a/index_.html
+++ b/index_.html
@@ -8,7 +8,7 @@
     href=
 "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="./style/styles.css"/>
+    <link rel="stylesheet" href="./style/styles_.css"/>
 
     <title>ZAHIR SAAD RESUME</title>
 
